work on dataset

--- a/data_eval/eit_analysis.ipynb
+++ b/data_eval/eit_analysis.ipynb
@@ -190,6 +190,26 @@
       "2625  1772145468061299200  Measurement     419.0  5.0    2.0 -2117.684211   \n",
       "2626  1772145468062299100  Measurement     419.0  5.0    3.0  -615.421053   \n",
       "2627  1772145468062299100  Measurement     419.0  5.0    4.0  2307.315789   \n",
+      "2628  1772145468063300100  Measurement     419.0  6.0    0.0  -892.947368   \n",
+      "2629  1772145468063300100  Measurement     419.0  6.0    1.0 -2383.210526   \n",
+      "2630  1772145468064299600  Measurement     419.0  6.0    2.0  -590.157895   \n",
+      "2631  1772145468064299600  Measurement     419.0  6.0    3.0    13.105263   \n",
+      "2632  1772145468065299500  Measurement     419.0  6.0    4.0   649.631579   \n",
+      "2633  1772145468065299500  Measurement     419.0  7.0    0.0  -901.947368   \n",
+      "2634  1772145468066313500  Measurement     419.0  7.0    1.0   538.526316   \n",
+      "2635  1772145468067306400  Measurement     419.0  7.0    2.0   -63.526316   \n",
+      "2636  1772145468067306400  Measurement     419.0  7.0    3.0  -267.473684   \n",
+      "2637  1772145468068300300  Measurement     419.0  7.0    4.0    59.368421   \n",
+      "2638  1772145468203911500  Measurement     420.0  0.0    0.0   343.526316   \n",
+      "2639  1772145468204915400  Measurement     420.0  0.0    1.0 -1460.157895   \n",
+      "2640  1772145468205916500  Measurement     420.0  0.0    2.0  -185.578947   \n",
+      "2641  1772145468205916500  Measurement     420.0  0.0    3.0  1263.368421   \n",
+      "2642  1772145468206916500  Measurement     420.0  0.0    4.0  -789.315789   \n",
+      "2643  1772145468206916500  Measurement     420.0  1.0    0.0   -60.947368   \n",
+      "2644  1772145468207919200  Measurement     420.0  1.0    1.0    26.894737   \n",
+      "2645  1772145468207919200  Measurement     420.0  1.0    2.0   -49.368421   \n",
+      "2646  1772145468207919200  Measurement     420.0  1.0    3.0   -99.842105   \n",
+      "2647  1772145468207919200  Measurement     420.0  1.0    4.0    38.473684   \n",
       "\n",
       "              Img    Magnitude  \n",
       "2598  -933.473684   930.475822  \n",
@@ -221,12 +241,159 @@
       "2624 -2155.052632  2152.584764  \n",
       "2625  2412.631579 -2343.021172  \n",
       "2626  -509.315789   511.754642  \n",
-      "2627   -54.526316   137.618682  \n"
+      "2627   -54.526316   137.618682  \n",
+      "2628  -169.368421   186.173022  \n",
+      "2629    -4.736842    37.366105  \n",
+      "2630 -1114.421053  1111.787331  \n",
+      "2631 -2550.052632  2550.076912  \n",
+      "2632   360.578947  -349.125301  \n",
+      "2633   -20.315789    24.430744  \n",
+      "2634   145.842105  -134.882621  \n",
+      "2635 -1002.684211  1001.442815  \n",
+      "2636 -1279.526316  1279.789569  \n",
+      "2637  -558.421053   558.502630  \n",
+      "2638  1654.526316 -1657.385727  \n",
+      "2639 -1490.210526  1527.433615  \n",
+      "2640   782.315789  -781.197371  \n",
+      "2641 -2103.421053  2107.885151  \n",
+      "2642   230.473684  -221.623906  \n",
+      "2643   313.210526  -316.379597  \n",
+      "2644   215.578947  -213.701643  \n",
+      "2645   190.263158  -192.597094  \n",
+      "2646  -133.000000   126.636016  \n",
+      "2647   110.263158  -109.397069  \n"
      ]
     }
    ],
    "source": [
-    "print(eit_df.head(30))"
+    "print(eit_df.head(50))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "f54184c7",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Frame_ID\n",
+      "419.0    1772145468057779712\n",
+      "420.0    1772145468214769920\n",
+      "421.0    1772145468369596928\n",
+      "422.0    1772145468524510720\n",
+      "423.0    1772145468687997952\n",
+      "Name: timestamp, dtype: int64\n",
+      "X: (1889, 40, 3) T: (1889,)\n",
+      "(1889, 41, 3)\n"
+     ]
+    }
+   ],
+   "source": [
+    "import numpy as np\n",
+    "import pandas as pd\n",
+    "\n",
+    "TS  = \"timestamp\"\n",
+    "FID = \"Frame_ID\"\n",
+    "R   = \"Inj\"\n",
+    "C   = \"Sense\"\n",
+    "\n",
+    "V = [\"Real\", \"Img\", \"Magnitude\"]\n",
+    "\n",
+    "df = eit_df.copy()\n",
+    "df[R] = df[R].astype(int)\n",
+    "df[C] = df[C].astype(int)\n",
+    "\n",
+    "# record index 0..39 (8*5=40) based on row/col\n",
+    "df[\"rec\"] = df[R] * 5 + df[C]\n",
+    "\n",
+    "# average timestamp per frame (common definition: midpoint)\n",
+    "avg_ts = df.groupby(FID)[TS].agg(lambda s: (s.min() + s.max()) / 2).astype(\"int64\")\n",
+    "\n",
+    "# build a complete frame x rec index so every frame has exactly 40 records\n",
+    "full_index = pd.MultiIndex.from_product([avg_ts.index, range(40)], names=[FID, \"rec\"])\n",
+    "\n",
+    "# keep only what we need, align to full grid, fill missing\n",
+    "wide = (\n",
+    "    df.set_index([FID, \"rec\"])[V]\n",
+    "      .reindex(full_index)\n",
+    "      .fillna(0.0)\n",
+    "      .sort_index()\n",
+    ")\n",
+    "\n",
+    "# tensor (num_frames, 40, 3)\n",
+    "X = wide.to_numpy().reshape(len(avg_ts), 40, len(V))\n",
+    "\n",
+    "# timestamps (num_frames,)\n",
+    "T = avg_ts.to_numpy()\n",
+    "\n",
+    "print(\"X:\", X.shape, \"T:\", T.shape)\n",
+    "\n",
+    "T3 = np.repeat(T[:, None, None], repeats=len(V), axis=2)  # (N,1,3)\n",
+    "X_with_time = np.concatenate([T3, X], axis=1)             # (N,41,3)\n",
+    "print(X_with_time.shape)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "id": "2f824d49",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[1.77214547e+18 1.77214547e+18 1.77214547e+18]\n",
+      "[[ 1.77214547e+18  1.77214547e+18  1.77214547e+18]\n",
+      " [ 3.99526316e+02 -9.33473684e+02  9.30475822e+02]\n",
+      " [-1.01157895e+02  1.16678947e+03 -1.16603591e+03]\n",
+      " [-1.17578947e+02 -8.26684211e+02  8.27240055e+02]\n",
+      " [-1.29463158e+03 -1.75842105e+03  1.79981531e+03]\n",
+      " [-6.48315789e+02 -2.00252632e+03  2.00806935e+03]\n",
+      " [ 1.15052632e+02 -2.67894737e+01  3.45140951e+01]\n",
+      " [-2.81052632e+01  1.05789474e+01 -1.20875644e+01]\n",
+      " [-2.00368421e+02  1.09263158e+02 -1.18479545e+02]\n",
+      " [-2.52842105e+02 -2.19000000e+02  2.04723659e+02]\n",
+      " [-9.25263158e+01  4.42631579e+01 -4.57764482e+01]\n",
+      " [ 1.05721053e+03  1.00368421e+02 -9.82384293e+01]\n",
+      " [ 1.25878947e+03 -1.55315789e+03  1.57541419e+03]\n",
+      " [ 1.19215789e+03 -1.11789474e+02  1.11732375e+02]\n",
+      " [ 1.26010526e+03  9.03157895e+01 -7.39093080e+01]\n",
+      " [ 5.47421053e+02 -1.78710526e+03  1.77574324e+03]\n",
+      " [ 1.96157895e+02  5.94736842e+01 -4.83653375e+01]\n",
+      " [-3.07894737e+01 -1.52105263e+02  1.50418301e+02]\n",
+      " [ 9.42631579e+01 -2.72105263e+01  2.98120004e+01]\n",
+      " [-1.69631579e+02  2.10368421e+02 -2.42781975e+02]\n",
+      " [ 6.70000000e+01 -2.97894737e+01  3.16098125e+01]\n",
+      " [-4.59210526e+02 -7.72368421e+02  7.70569873e+02]\n",
+      " [-3.40526316e+01 -1.80263158e+03  1.80222908e+03]\n",
+      " [-5.11105263e+02  3.48684211e+02 -3.54509686e+02]\n",
+      " [ 1.99431579e+03  1.07021053e+03 -9.79734472e+02]\n",
+      " [-1.13605263e+03 -2.00863158e+03  2.02950348e+03]\n",
+      " [ 2.94168421e+03 -5.71736842e+02  7.37427471e+02]\n",
+      " [-6.84947368e+02 -2.15505263e+03  2.15258476e+03]\n",
+      " [-2.11768421e+03  2.41263158e+03 -2.34302117e+03]\n",
+      " [-6.15421053e+02 -5.09315789e+02  5.11754642e+02]\n",
+      " [ 2.30731579e+03 -5.45263158e+01  1.37618682e+02]\n",
+      " [-8.92947368e+02 -1.69368421e+02  1.86173022e+02]\n",
+      " [-2.38321053e+03 -4.73684211e+00  3.73661047e+01]\n",
+      " [-5.90157895e+02 -1.11442105e+03  1.11178733e+03]\n",
+      " [ 1.31052632e+01 -2.55005263e+03  2.55007691e+03]\n",
+      " [ 6.49631579e+02  3.60578947e+02 -3.49125301e+02]\n",
+      " [-9.01947368e+02 -2.03157895e+01  2.44307438e+01]\n",
+      " [ 5.38526316e+02  1.45842105e+02 -1.34882621e+02]\n",
+      " [-6.35263158e+01 -1.00268421e+03  1.00144281e+03]\n",
+      " [-2.67473684e+02 -1.27952632e+03  1.27978957e+03]\n",
+      " [ 5.93684211e+01 -5.58421053e+02  5.58502630e+02]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(X_with_time[0, 0])  # timestamp of first frame\n",
+    "print(X_with_time[0, :]) # 40 records of first frame"
    ]
   }
  ],
